--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		Id vix modo tation, an habeo intellegebat est. His et solum incorrupte, no fabellas phaedrum sea. Nibh deleniti liberavisse mel ut, vel in vide discere assentior. Vim tempor convenire id. Ea viderer eleifend platonem per, partem vocibus salutatus at vel, pri ad dicat dolor.</p>
 	</div>
 	<div class="textimage">
-		<img src="images/Giovanni.jpg" alt="Gioavanni the Artist">
+		<img src="Giovanni.jpg" alt="Gioavanni the Artist">
 	</div> 
 		</div>
 
