--- a/index.html
+++ b/index.html
@@ -6,53 +6,129 @@
 		<link rel="stylesheet"	href="https://fonts.googleapis.com/css?family=Tangerine">
 		<link rel="stylesheet"	href="https://fonts.googleapis.com/css?family=Assistant">
 		<link rel="stylesheet"	href="https://fonts.googleapis.com/css?family=Advent+Pro">
-	
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@1,200&display=swap" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 </head>
 
 <body>
-
+<div class="containermain">
 	<div class="containerleft">
+			<div class="social">
+			<a href="#"><img src="images/logos/facebook-32.png"></a>
+			<a href="#"><img src="images/logos/twitter-32.png"></a>
+			<a href="#"><img src="images/logos/instagram-32.png"></a>
+			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			</div>
 			<hr>
 			<H1>ARTY ZANO's</H1>
 			<hr>
 			<H2>P I Z Z E R I A</H2>
-			<H4>GALLERIA</H4>
+			<H4>Y GALLERIA</H4>
 			<H3>DUBLIN CORK GALWAY BELFAST</H3>
+			<h5>l'amore è un dono. Deve essere condiviso<translate="no"></h5>
 	</div>
 	<div class="containerright">
 			<ul>
-			<li><a hef="#">Our Story</a></li>
-			<li><a hef="#">Book a Table</a></li>
-			<li><a hef="#">Order a Takeway</a></li>
-			<li><a hef="#">Make Pizza Like Us!</a></li>
-			<li><a hef="#">Join our Couchere (our what?!)</a></li>
-			<li><a hef="#">Art @Artyz</a></li>
+			<li><a hef="about.html">Our Story</a></li>
+			<hr>
+			<li><a hef="#book">Book a Table</a></li>
+			<hr>
+			<li><a hef="meupage.html">Our Menu</a></li>
+			<hr>
+			<li><a hef="events.html">Make Pizza Like Us!</a></li>
+			<hr>
+			<li><a hef="art.html">Art @Artyz</a></li>
 			</ul>
 	</div>
 
 	<div class="textarea1">
-		<h2>Our Story</h2>
-	<p>Lorem ipsum dolor sit amet, vim quidam ponderum partiendo ut, mei ad alii vituperata, pri timeam reprehendunt te. Dicunt nominavi recteque ex mel, ex modus voluptaria accommodare pri, everti intellegam ad sit. Vix eu exerci everti vocent, at dicit sententiae sea, idque erant sapientem eos ex. Solet conclusionemque nam ne, cu populo fabulas sit, ei possit delectus pertinax sit.
+		
+		<h2>Love is a gift. It must be shared...</h2>
+	
+	<p> At Atry Zano's we believe in love. From the organically grown and locally sourced ingredients we use, to our eco friedly wood fired oven and our compostable packaging we try to share the love we have for our food and our world with you. The recipes and flavours we use come from places as close to heaven as we could reach. </p>
+	<p> We want to share the beauty of art. We support our local artists by giving them a place to showcase their talents and inspire others.</p> 
+	<p> We want you to be part of our world and we want to be part of yours. Come to the place where everyone is welcome.</p>
+	</div>	
 
-		Id vix modo tation, an habeo intellegebat est. His et solum incorrupte, no fabellas phaedrum sea. Nibh deleniti liberavisse mel ut, vel in vide discere assentior. Vim tempor convenire id. Ea viderer eleifend platonem per, partem vocibus salutatus at vel, pri ad dicat dolor.</p>
+	<div class = "bookings">
+		<hr>
+		<h2 id="book">Book a Table</h2>
+		<hr>
+		<iframe id="sagendaFrame" src="https://sagenda.net/Frontend/Calendar/5fdfb5a505d54b331813602e" scrolling="no" height="1000" style="width:100%" frameborder="0" allowtransparency="true" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-top-navigation allow-scripts allow-forms"></iframe>
+
 	</div>
-	<div class="textimage">
-		<img src="Giovanni.jpg" alt="Gioavanni the Artist">
-	</div> 
-		</div>
-
-
 	<div class="reviewbar">
-	<p>This is the reviews textbar</p>
-	
-
+		<hr>
+		<h2>Our Reviews</h2>
+		<hr>
+		<div class="divrev">
+		
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<h2>"Trascendente.."</h2>
+<p>I would change my religion for this pizza</p>
+<p>Gino di Campo</p>
 	</div>
-	<div class="ctabar">
-	<p>This is call to action bar</p>
+	<div class="divrev">
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<h2>"My new love.."</h2>
+		<p>I haven't found anything to match the taste of food here. The atmosphere, the staff, everything is perfect.</p>
+		<p>Silvio Berlusconi</p>
+		</div>
+		<div class="divrev">
+			<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star checked"></span>
+		<span class="fa fa-star"></span>
+		<h2>"The kids LOVE it"</h2>
+		<p>We go here all the time as family. There is always a warm welcome. We leave full to the brim. This is a restaurant made for us. Genuinely. </p>
+		<p>Miriam O'Callaghan</p>
+			</div>
+	</div>
+	<div class="orderdiv">
+		<h2>Order for Delivery</h2>
+		<a href="https://deliveroo.ie/" target="blank"><button>Order with Deliveroo</button></a>
+	</div>
 	
+	<div class="imagearea">
+		<h2>Make Pizza Like Us</h2>
+		</div> 
+	<div class="ctabar">
+		
+		<div class="ctadiv">
+			<h2>JOIN US</h2>
+			<address>
+			Temple Bar,<br>
+			Dublin City Centre,<br>
+			Dublin 2.<br>
+			Ireland.
+		</address>
+		</div>
+		<div class="ctadiv">
+			<h2>CALL US</h2>
+			<img src="images/logos/phone-32.png">
+			<a href="tel:011234567">(01) 1234567</a>
+		</div>
+		<div class="ctadiv">
+			<h2>FOLLOW US</h2><br>
+			<a href="#"><img src="images/logos/facebook-32.png"></a>
+			<a href="#"><img src="images/logos/twitter-32.png"></a>
+			<a href="#"><img src="images/logos/instagram-32.png"></a>
+			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+		</div>
+	</div>
 </div>
-
 
 
 
