--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
 <div class="containermain">
 	<div class="containerleft">
 			<div class="social">
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 			</div>
 			<hr>
 			<H1>ARTY ZANO's</H1>
@@ -30,13 +30,11 @@
 			<ul>
 				<li><a hef="index.html">Home</a></li>
 				<hr>
-				<li><a hef="#book">Book a Table</a></li>
+				<li><a hef="menupage.html">Our Menu</a></li>
 				<hr>
-				<li><a hef="#">Order a Takeway</a></li>
+				<li><a hef="events.html">Make Pizza Like Us!</a></li>
 				<hr>
-				<li><a hef="#">Make Pizza Like Us!</a></li>
-				<hr>
-				<li><a hef="#">Art @Artyz</a></li>
+				<li><a hef="art.html">Art @Artyz</a></li>
 				</ul>
 			
 	</div>
@@ -84,7 +82,7 @@
 		
 	</div>
 	<div class="imageareaab">
-		<a href="#"><h2>CHECK OUT OUR MENU</h2></a>
+		<a href="menupage.html"><h2>CHECK OUT OUR MENU</h2></a>
 		</div> 
 	<div class="ctabar">
 		
@@ -104,10 +102,10 @@
 		</div>
 		<div class="ctadiv">
 			<H2>FOLLOW US</H2>
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 		</div>
 	</div>
 </div>
