--- a/art.html
+++ b/art.html
@@ -18,10 +18,10 @@
     <div class="arthero">
  	<div class="containerleftmenu">
 			<div class="social">
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 			</div>
 			<hr>
 			<H1>ARTY ZANO's</H1>
@@ -128,15 +128,15 @@
 		</div>
 		<div class="ctadiv">
 			<h2>CONTACT US</h2>
-			<img src="images/logos/phone-32.png">
+			<img src="phone-32.png">
 			<a href="tel:011234567">(01) 1234567</a>
 		</div>
 		<div class="ctadiv">
 			<H2>FOLLOW US</H2>
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 		</div>
 	</div>
 </div>
