--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div class="containermain">
 	<div class="containerleft">
 			<div class="social">
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 			</div>
 			<hr>
 			<H1>ARTY ZANO's</H1>
@@ -102,7 +102,7 @@
 	</div>
 	
 	<div class="imagearea">
-		<h2>Make Pizza Like Us</h2>
+		<a href="events.html"><h2>Make Pizza Like Us</h2></a>
 		</div> 
 	<div class="ctabar">
 		
@@ -117,15 +117,15 @@
 		</div>
 		<div class="ctadiv">
 			<h2>CALL US</h2>
-			<img src="images/logos/phone-32.png">
+			<img src="phone-32.png">
 			<a href="tel:011234567">(01) 1234567</a>
 		</div>
 		<div class="ctadiv">
 			<h2>FOLLOW US</h2><br>
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 		</div>
 	</div>
 </div>
