--- a/menupage.html
+++ b/menupage.html
@@ -18,10 +18,10 @@
     <div class="tophero">
  	<div class="containerleftmenu">
 			<div class="social">
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 			</div>
 			<hr>
 			<H1>ARTY ZANO's</H1>
@@ -132,10 +132,10 @@
 		</div>
 		<div class="ctadiv">
 			<H2>FOLLOW US</H2>
-			<a href="#"><img src="images/logos/facebook-32.png"></a>
-			<a href="#"><img src="images/logos/twitter-32.png"></a>
-			<a href="#"><img src="images/logos/instagram-32.png"></a>
-			<a href="#"><img src="images/logos/tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png"></a>
+			<a href="#"><img src="twitter-32.png"></a>
+			<a href="#"><img src="instagram-32.png"></a>
+			<a href="#"><img src="tiktok-32.png"></a>
 		</div>
 	</div>
 </div>
