--- a/art.html
+++ b/art.html
@@ -53,37 +53,37 @@
 		<h2>Currently on Show</h2>
 		<h3>Angelica Divine</h3>
 			<div class="divart">
-			<img src = "images/lady.jpg" alt="the lady by Angelica Divine" width="200" height="250" >
+			<img src = "lady.jpg" alt="the lady by Angelica Divine" width="200" height="250" >
 			<h4>The lady</h4>
 			<a href="#"><button>Buy Now</button></a>
 			<a href="#"><button>Order Print</button></a>
 			</div>
 			<div class="divart">
-				<img src = "images/gent.jpg" alt="the Gent by Angelica Divine" width="200" height="250">
+				<img src = "gent.jpg" alt="the Gent by Angelica Divine" width="200" height="250">
 				<h4>The Gent</h4>
 				<button>Buy Now</button>
 				<button>Order Print</button>
 				</div>
 			<div class="divart">
-			<img src = "images/nana.jpg" alt="the Nana by Angelica Divine" width="200" height="250">
+			<img src = "nana.jpg" alt="the Nana by Angelica Divine" width="200" height="250">
 			<h4>The Nana</h4>
 			<button>Buy Now</button>
 			<button>Order Print</button>
 			</div>
 			<div class="divart">
-				<img src = "images/boy.jpg" alt="the Boy by Angelica Divine" width="200" height="250">
+				<img src = "boy.jpg" alt="the Boy by Angelica Divine" width="200" height="250">
 				<h4>The Boy</h4>
 				<button>Buy Now</button>
 				<button>Order Print</button>
 				</div>
 			<div class="divart">
-			<img src = "images/Pastel.jpg" alt="Study in Pastel by Angelica Divine" width="200" height="250">
+			<img src = "Pastel.jpg" alt="Study in Pastel by Angelica Divine" width="200" height="250">
 			<h4>Study in Pastel</h4>
 			<button>Buy Now</button>
 			<button>Order Print</button>
 			</div>
 			<div class="divart">
-			<img src = "images/sketch.jpg" alt="Portraint in Pencil by Angelica Divine" width="200" height="250">
+			<img src = "sketch.jpg" alt="Portraint in Pencil by Angelica Divine" width="200" height="250">
 			<h4>Portrait in Pencil</h4>
 			<button>Buy Now</button>
 			<button>Order Print</button>
