--- a/art.html
+++ b/art.html
@@ -83,7 +83,7 @@
 			<button>Order Print</button>
 			</div>
 			<div class="divart">
-			<img src = "sketch.jpg" alt="Portraint in Pencil by Angelica Divine" width="200" height="250">
+			<img src = "Sketch.jpg" alt="Portraint in Pencil by Angelica Divine" width="200" height="250">
 			<h4>Portrait in Pencil</h4>
 			<button>Buy Now</button>
 			<button>Order Print</button>
