--- a/events.html
+++ b/events.html
@@ -29,13 +29,13 @@
 			
 			<h5>Per trovare il cuore, segui i sensi<translate="no"></h5>
 			<ul>
-				<li><a hef="index.html" target="blank">Home</a></li>
+				<li><a href="index.html" target="blank">Home</a></li>
 				<hr>
-				<li><a hef="about.html">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<hr>
-				<li><a hef="menupage.html">Our Menu</a></li>
+				<li><a href="menupage.html">Our Menu</a></li>
 				<hr>
-				<li><a hef="art.html">Art @ Artyz</a></li>
+				<li><a href="art.html">Art @ Artyz</a></li>
 				</ul>
 			
 	</div>
