--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <div class="containermain">
 	<div class="containerleft">
 			<div class="social">
-			<a href="#"><img src="facebook-32.png"></a>
-			<a href="#"><img src="twitter-32.png"></a>
-			<a href="#"><img src="instagram-32.png"></a>
-			<a href="#"><img src="tiktok-32.png"></a>
+			<a href="#"><img src="facebook-32.png" alt="Join us on facebook"></a>
+			<a href="#"><img src="twitter-32.png" alt="Join us on twitter"></a>
+			<a href="#"><img src="instagram-32.png" alt="Join us on instagram"></a>
+			<a href="#"><img src="tiktok-32.png" alt="Join us on tik tok"></a>
 			</div>
 			<hr>
 			<H1>ARTY ZANO's</H1>
@@ -32,15 +32,15 @@
 	</div>
 	<div class="containerright">
 			<ul>
-			<li><a hef="about.html">Our Story</a></li>
+			<li><a href="about.html" target="self">Our Story</a></li>
 			<hr>
-			<li><a hef="#book">Book a Table</a></li>
+			<li><a href="#book">Book a Table</a></li>
 			<hr>
-			<li><a hef="meupage.html">Our Menu</a></li>
+			<li><a href="menupage.html">Our Menu</a></li>
 			<hr>
-			<li><a hef="events.html">Make Pizza Like Us!</a></li>
+			<li><a href="events.html">Make Pizza Like Us!</a></li>
 			<hr>
-			<li><a hef="art.html">Art @Artyz</a></li>
+			<li><a href="art.html">Art @Artyz</a></li>
 			</ul>
 	</div>
 
