--- a/menupage.html
+++ b/menupage.html
@@ -29,15 +29,15 @@
 			
 			<h5>Il cibo è amore<translate="no"></h5>
 			<ul>
-				<li><a hef="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<hr>
-				<li><a hef="about.html">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<hr>
-				<li><a hef="#book">Book a Table</a></li>
+				<li><a href="#book">Book a Table</a></li>
 				<hr>
-				<li><a hef="events.html">Make Pizza Like Us!</a></li>
+				<li><a href="events.html">Make Pizza Like Us!</a></li>
 				<hr>
-				<li><a hef="art.html">Art @Artyz</a></li>
+				<li><a href="art.html">Art @Artyz</a></li>
 				</ul>
 			
 	</div>
