--- a/about.html
+++ b/about.html
@@ -28,13 +28,13 @@
 			<H2>ABOUT ARTYZ</H2>
 			<h5>Da un seme può crescere un giardino<translate="no"></h5>
 			<ul>
-				<li><a hef="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<hr>
-				<li><a hef="menupage.html">Our Menu</a></li>
+				<li><a href="menupage.html">Our Menu</a></li>
 				<hr>
-				<li><a hef="events.html">Make Pizza Like Us!</a></li>
+				<li><a href="events.html">Make Pizza Like Us!</a></li>
 				<hr>
-				<li><a hef="art.html">Art @Artyz</a></li>
+				<li><a href="art.html">Art @Artyz</a></li>
 				</ul>
 			
 	</div>
