--- a/art.html
+++ b/art.html
@@ -29,13 +29,13 @@
 			
 			<h5>Il cibo è arte<translate="no"></h5>
 			<ul>
-				<li><a hef="index.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<hr>
-				<li><a hef="about.html">About Us</a></li>
+				<li><a href="about.html">About Us</a></li>
 				<hr>
-				<li><a hef="menupage.html">Our Menu</a></li>
+				<li><a href="menupage.html">Our Menu</a></li>
 				<hr>
-				<li><a hef="events.html">Make Pizza Like Us!</a></li>
+				<li><a href="events.html">Make Pizza Like Us!</a></li>
 				</ul>
 			
 	</div>
