--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		
 		<h2>Love is a gift. It must be shared...</h2>
 	
-	<p> At Atry Zano's we believe in love. From the organically grown and locally sourced ingredients we use, to our eco friedly wood fired oven and our compostable packaging we try to share the love we have for our food and our world with you. The recipes and flavours we use come from places as close to heaven as we could reach. </p>
+	<p> At Arty Zano's we believe in love. From the organically grown and locally sourced ingredients we use, to our eco friedly wood fired oven and our compostable packaging we try to share the love we have for our food and our world with you. The recipes and flavours we use come from places as close to heaven as we could reach. </p>
 	<p> We want to share the beauty of art. We support our local artists by giving them a place to showcase their talents and inspire others.</p> 
 	<p> We want you to be part of our world and we want to be part of yours. Come to the place where everyone is welcome.</p>
 	</div>	
