--- a/art.html
+++ b/art.html
@@ -41,7 +41,7 @@
 	</div>
 	<div class="containerleftmenu">
 			<H5>Ph 01 1234567</H5>
-          <h4>ART @ ATRYZ</h4>
+          <h4>ART @ ARTYZ</h4>
 	</div>
 </div>
 	<div class="textarea1">
